--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "vue-tinymce",
+  "name": "@larrykk/vue-tinymce",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.2",
     "core-js": "^3.6.5",
+    "tinymce": "^5.3.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
-    "@vue/cli-plugin-eslint": "^4.4.0",
     "@vue/cli-service": "^4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
