--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@larrykk/vue-tinymce",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/larrykkk/larrykk-vue-tinymce.git"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
